# scrHLAtag

./: Cargo.toml  DISCOVERY.md  EXAMPLES.md  Fusion_Align_20220511.Rmd  LICENSE  README.md  out.bam  out.sam  params_scrHLAtag.yml  scrHLAtag.rs
data/: align.fasta  all_alleles.tsv  full_dedup.bam.bai  test.bam  test.sam  test_mm.paf  testhla.tsv
scripts/: generation_refs.sh
src/: addback.rs  addback.yml  cli.yml  main.rs  params_scrHLAtag.yml  scrHLAtag.rs
src/scrhlatag/: mod.rs
src/vc/: mod.rs  splitncigar.rs
