[package]
name = "scrHLAtag"
version = "0.0.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bam = "0.1.4"
clap = { version = "2.33.0", features = ["yaml"] }
flate2 = "1.0.24"
bytes = "1.1.0"
simple-log = "1.5.1"
toml = "0.5.7"
serde_derive = "1.0.140"
serde = "1.0.147"
csv = "1.1.6"
itertools = "0.10.0"
# fasta = "0.1.3"
# seq_io = "0.3.1"
minimap2-sys = "0.1.10"
minimap2 = { version = "0.1.11", features = ["htslib"] }
rust-htslib = "0.40.2"
noodles = { version = "0.34.0", features = ["fasta"] }


[[bin]]
name = "scrHLAtag"
path = "src/scrHLAtag.rs"

