[package]
name = "scrHLAtag"
version = "0.1.5"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastq = "0.6.0"
bam = "0.1.4"
clap = { version = "2.33.0", features = ["yaml"] }
flate2 = "1.0.24"
bytes = "1.1.0"
simple-log = "1.5.1"
toml = "0.5.7"
serde_derive = "1.0.140"
serde = "1.0.147"
csv = "1.1.6"
itertools = "0.10.0"
noodles-fasta = "0.20.0"
include_dir = "0.7.3"
kseq = "0.5.0"
arrayref = "0.3.7"
yaml-rust = "0.4.1"
rust-htslib = "=0.44.1"


[[bin]]
name = "scrHLAtag"
path = "src/main.rs"

